refactor: remove tool 'TypeClassifier'