@@ -21,7 +21,6 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Member;
 import java.time.DayOfWeek;
 import java.time.Month;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -34,41 +33,62 @@ import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 
 import io.github.imsejin.common.assertion.Asserts;
-import io.github.imsejin.common.tool.TypeClassifier;
 
 import static java.util.stream.Collectors.*;
 import static org.assertj.core.api.Assertions.*;
 
 class ClassUtilsTest {
 
-    private static final List<Class<?>> INTERFACES = Arrays.asList(
-            CharSequence.class, Function.class, Member.class, Annotation.class);
-    private static final List<Class<?>> ANNOTATIONS = Arrays.asList(
-            Override.class, SuppressWarnings.class, SafeVarargs.class, FunctionalInterface.class);
-    private static final List<Class<?>> ENUMS = Arrays.asList(
-            TimeUnit.class, DayOfWeek.class, Month.class);
+    private static final List<Class<?>> PRIMITIVES = List.of(
+            byte.class, short.class, int.class, long.class,
+            float.class, double.class, char.class, boolean.class, void.class
+    );
+
+    private static final List<Class<?>> WRAPPERS = List.of(
+            Byte.class, Short.class, Integer.class, Long.class,
+            Float.class, Double.class, Character.class, Boolean.class, Void.class
+    );
+
+    private static final List<Class<?>> INTERFACES = List.of(
+            CharSequence.class, Function.class, Member.class, Annotation.class
+    );
+
+    private static final List<Class<?>> ANNOTATIONS = List.of(
+            Override.class, SuppressWarnings.class, SafeVarargs.class, FunctionalInterface.class
+    );
+
+    private static final List<Class<?>> ENUMS = List.of(
+            TimeUnit.class, DayOfWeek.class, Month.class
+    );
+
     private static final List<Class<?>> ENUM_CONSTANTS = Stream.concat(
-                    EnumSet.allOf(TimeUnit.class).stream(), EnumSet.allOf(Month.class).stream())
+                    EnumSet.allOf(TimeUnit.class).stream(), EnumSet.allOf(Month.class).stream()
+            )
             .map(Object::getClass).collect(toList());
-    private static final List<Class<?>> ABSTRACT_CLASSES = Arrays.asList(
-            OutputStream.class, EnumSet.class, Asserts.class, Number.class);
-    private static final List<Class<?>> ANONYMOUS_CLASSES = Arrays.asList(
+
+    private static final List<Class<?>> ABSTRACT_CLASSES = List.of(
+            OutputStream.class, EnumSet.class, Asserts.class, Number.class
+    );
+
+    private static final List<Class<?>> ANONYMOUS_CLASSES = List.of(
             new Asserts() {
             }.getClass(),
             new Random() {
-            }.getClass());
-    private static final List<Class<?>> ARRAYS = Arrays.asList(
-            int[].class, Member[].class, Override[].class, Month[].class, Number[].class);
+            }.getClass()
+    );
+
+    private static final List<Class<?>> ARRAYS = List.of(
+            int[].class, Member[].class, Override[].class, Month[].class, Number[].class
+    );
 
     @Test
     void isEnumOrEnumConstant() {
         List<Class<?>> enumAndConstantClasses = Stream.of(ENUMS, ENUM_CONSTANTS)
-                .flatMap(Collection::stream).collect(toList());
+                .flatMap(Collection::stream).toList();
         List<Class<?>> classes = Stream.of(
                         Collections.singleton((Class<?>) null),
-                        TypeClassifier.Types.PRIMITIVE.getClasses(),
-                        TypeClassifier.Types.WRAPPER.getClasses(),
-                        INTERFACES, ANNOTATIONS, ANONYMOUS_CLASSES, ARRAYS)
+                        PRIMITIVES, WRAPPERS, INTERFACES, ANNOTATIONS, ANONYMOUS_CLASSES, ARRAYS
+                )
                 .flatMap(Collection::stream).collect(toList());
 
         enumAndConstantClasses.forEach(clazz -> assertThat(ClassUtils.isEnumOrEnumConstant(clazz))
@@ -79,12 +99,11 @@ class ClassUtilsTest {
 
     @Test
     void isAbstractClass() {
-        List<Class<?>> nonAbstractClasses = Stream.of(
+        List<? extends Class<?>> nonAbstractClasses = Stream.of(
                         Collections.singleton((Class<?>) null),
-                        TypeClassifier.Types.PRIMITIVE.getClasses(),
-                        TypeClassifier.Types.WRAPPER.getClasses(),
-                        INTERFACES, ANNOTATIONS, ENUMS, ENUM_CONSTANTS, ANONYMOUS_CLASSES, ARRAYS)
-                .flatMap(Collection::stream).collect(toList());
+                        PRIMITIVES, WRAPPERS, INTERFACES, ANNOTATIONS, ENUMS, ENUM_CONSTANTS, ANONYMOUS_CLASSES, ARRAYS
+                )
+                .flatMap(Collection::stream).toList();
 
         ABSTRACT_CLASSES.forEach(clazz -> assertThat(ClassUtils.isAbstractClass(clazz))
                 .as("this is abstract class: '%s'", clazz).isTrue());
